--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 <section class="login-block">
-  <div class="container">
+  <div class="login-container">
     <div class="row">
       <div class="col-md-4 login-sec">
         <h2 class="text-center">Login Employee</h2>
