--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -25,6 +25,10 @@
         <td>{{ employee.basicSalary | currency: 'IDR'  }}</td>
         <td>
           <a routerLink="/employee/detail/{{ employee.id }}" class="btn btn-success btn-sm">Detail</a>
+          |
+          <a routerLink="/employee/form" class="btn btn-warning btn-sm">Edit</a>
+          |
+          <button class="btn btn-danger btn-sm">Delete</button>
         </td>
       </tr>
     </tbody>
